fixed the gap

--- a/meatcalc/themes/viko/assets/css/_custom-styles.scss
+++ b/meatcalc/themes/viko/assets/css/_custom-styles.scss
@@ -33,6 +33,11 @@
     background-color: darken($table-background-color, 5%);
 }
 
+.control
+{
+    text-indent: 0em;
+}
+
 p {
     margin-bottom: 1em;
     text-indent: 1em;
